@startuml

class Partie {
  -id: int
  -membre: Membre
  -personnage: Personnaged
  -score: int
  -statut: Statut
  -debut: Date
  -fin: Date
  
  +getId(): int
  +setId(id: int): void
  +getMembre(): Membre
  +setMembre(membre: Membre): void
  +getPersonnage(): Personnage
  +setPersonnage(personnage: Personnage): void
  +getScore(): int
  +setScore(score: int): void
}

class Membre {
  -id: int
  -pseudo: string
  -mdp: string
  -nom: string
  -photo: string
  
  +getId(): int
  +setId(id: int): void
  +getPseudo(): string
  +setPseudo(pseudo: string): void
  +getMdp(): string
  +setMdp(mdp: string): void
  +getNom(): string
  +setNom(nom: string): void
  +getPhoto(): string
  +setPhoto(photo: string): void
}

class Personnage {
  -id: int
  -nom: string
  -photo: string
  -jouable: boolean
  -copie: Personnage
  
  +getId(): int
  +setId(id: int): void
  +getNom(): string
  +setNom(nom: string): void
  +getPhoto(): string
  +setPhoto(photo: string): void
  +getJouable(): boolean
  +setJouable(jouable: boolean): void
  +getCopie(): Personnage
  +setCopie(copie: Personnage): void
}

class Type {
  -id: int
  -nom: string
  -logo: string
  
  +getId(): int
  +setId(id: int): void
  +getNom(): string
  +setNom(nom: string): void
  +getLogo(): string
  +setLogo(logo: string): void
}

class Badge {
  -id: int
  -type: Type
  -ordre: int
  
  +getId(): int
  +setId(id: int): void
  +getType(): Type
  +setType(type: Type): void
  +getOrdre(): int
  +setOrdre(ordre: int): void
}

class Objet {
  -id: int
  -nom: string
  -image: string
  
  +getId(): int
  +setId(id: int): void
  +getNom(): string
  +setNom(nom: string): void
  +getImage(): string
  +setImage(image: string): void
}

class Statut {
  -id: int
  -nom: string
  
  +getId(): int
  +setId(id: int): void
  +getNom(): string
  +setNom(nom: string): void
}

class Pokemon {
  -id: int
  -numero: int
  -nom: string
  -miniature: string
  -base_attaqie: int
  
  +getId(): int
  +setId(id: int): void
  +getNumero(): int
  +setNumero(numero: int): void
  +getNom(): string
  +setNom(nom: string): void
  +getMiniature(): string
  +getBaseAttaque(): int
  +setBaseAttaque(base_attaqie: int): void
}

class Talent {
  -id: int
  -nom: string
  -fois: int
  
  +getId(): int
  +setId(id: int): void
  +getNom(): string
  +setNom(nom: string): void
  +getFois(): int
  +setFois(fois: int): void
}

class Attaque {
  -id: int
  -nom: string
  -puissance: int
  -precision: int
  
  +getId(): int
  +setId(id: int): void
  +getNom(): string
  +setNom(nom: string): void
  +getPuissance(): int
  +setPuissance(puissance: int): void
  +getPrecision(): int
  +setPrecision(precision: int): void
}

class BaseEffet {
  -id: int
  -colonne: string
  -precision: int
  -degats: int
  -affecte_ennemi: boolean
  -affecte_pokemon: boolean
  
  +getId(): int
  +setId(id: int): void
  +getColonne(): string
  +setColonne(colonne: string): void
  +getPrecision(): int
  +setPrecision(precision: int): void
  +getDegats(): int
  +setDegats(degats: int): void
  +getAffecteEnnemi(): boolean
  +setAffecteEnnemi(affecte_ennemi: boolean): void
  +getAffectePokemon(): boolean
  +setAffectePokemon(affecte_pokemon: boolean): void
}

class Effet {
  -id: int
  -nom: string
  -description: string
  
  +getId(): int
  +setId(id: int): void
  +getNom(): string
  +setNom(nom: string): void
  +getDescription(): string
  +setDescription(description: string): void
}

class Strategie {
  -id: int
  -nom: string
  
  +getId(): int
  +setId(id: int): void
  +getNom(): string
  +setNom(nom: string): void
}

class Ennemi {
  -id: int
  -ordre: int
  -type: Type
  -nom: string
  -phrase_debut: string
  -strategie: Strategie
  -personnage: Personnage
  
  +getId(): int
  +setId(id: int): void
  +getOrdre(): int
  +setOrdre(ordre: int): void
  +getType(): Type
  +setType(type: Type): void
  +getNom(): string
  +setNom(nom: string): void
  +getPhraseDebut(): string
  +setPhraseDebut(phrase_debut: string): void
  +getStrategie(): Strategie
  +setStrategie(strategie: Strategie): void
  +getPersonnage(): Personnage
  +setPersonnage(personnage: Personnage): void
}

class Climat {
  -id: int
  -nom: string
  
  +getId(): int
  +setId(id: int): void
  +getNom(): string
  +setNom(nom: string): void
}

class Combattre {
  -id: int
  +getId(): int
  +setId(id: int): void
}

class ConstituerEquipe {
  -id: int
  -iv_attaque: int
  -iv_vitesse: int
  -niveau: int
  -pv_restants: int
  -ordre: int
  -experience: int
  -shiny: boolean
  +getId(): int
  +setId(id: int): void
}

Partie "1..*" -- "1..1" Membre
Partie "1..*" -- "1..*" Badge

Ennemi "1..*" -- "1..1" Strategie
Ennemi "1..*" -- "0..1" Badge
Ennemi "1..*" -- "1..*" Objet
Ennemi "1..*" -- "1..1" Personnage 

Effet "1..*" -- "1..*" BaseEffet

Effet "1..*" --	"1..*" Talent
Effet "1..*" -- "1..*" Attaque
Effet "1..*" -- "1..*" Statut

Type "1..*" -- "1..*" Type

Pokemon "1..*" -- "1..*" Type
Pokemon "1..*" -- "1..*" Attaque
Pokemon "0..1" -- "0..1" Pokemon

Pokemon "1..*" -- "1..1" Talent
Personnage "1..*" -- "1..*" Objet

Combattre "1..*" -- "1..*" Personnage
Combattre "1..*" -- "1..1" Climat
Combattre "1..*" -- "1..1" Effet

Personnage "1..1" -- "1..*" ConstituerEquipe 
Objet "1..1" -- "1..*" ConstituerEquipe 
Pokemon "1..1" -- "1..*" ConstituerEquipe 
Talent "1..1" -- "1..*" ConstituerEquipe 
Statut "1..1" -- "1..*" ConstituerEquipe 
Attaque "1,*" -- "1..*" ConstituerEquipe
@endumld